--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -32,7 +32,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: v0.126.1+extended
+      HUGO_VERSION: 0.126.1
     steps:
       - name: Install Hugo CLI
         run: |
